--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Imports:
     readxl (>= 1.4.0),
     preprocessCore (>= 1.50.0),
     ggplot2 (>= 3.4.0),
-    tidyverse (>= 1.3.0),
+    magrittr (>= 2.0.0),
     tidyr (>= 1.2.0),
     dplyr (>= 1.0.0),
     purrr (>= 1.0.0),
@@ -35,3 +35,4 @@ Imports:
 Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+
